Second commit for Business web app created using styled components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http//felidious/github.io/Business-App",
+  "homepage":"http//felidious.github.io/Business-App",
   "name": "business-app",
   "version": "0.1.0",
   "private": true,
