--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http//felidious.github.io/Business-App",
+  "homepage":"http://felidious.github.io/marketing-app",
   "name": "business-app",
   "version": "0.1.0",
   "private": true,
